--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ authors:
       name:           Serdar
       site:           https://www.serdarbaran.github.io
       avatar:         /assets/images/avatar1.jpg
-      bio:            "Hi, I am Serdar, the author of BaranNotes. I hope you like it!"
+      bio:            "Hi, I am Serdar, the author of BaranNotes. I hope you like the blog!"
       email:          sbbaran@gmail.com
       #twitter:        https://twitter.com/wowthemesnet
 
